<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:elevation="0dp"
        app:cardCornerRadius="30dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="@+id/textLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textLayout">

        <ImageView
            android:id="@+id/img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/ash" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cardView"
        app:layout_constraintRight_toLeftOf="@+id/forward"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/charcoalGrey"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/author_name"
            android:textColor="@color/ash" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="8dp"
            android:gravity="end"
            android:text="@string/date_dummy" />
    </LinearLayout>

    <ImageView
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_forward"
        android:backgroundTint="@color/ash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".5" />


</androidx.constraintlayout.widget.ConstraintLayout>